[gd_scene load_steps=7 format=3 uid="uid://c8m3xqm7nxwpz"]

[ext_resource type="Script" path="res://scenes/experiments/fireball_charge/fireball_projectile.gd" id="1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 16.0

[sub_resource type="Gradient" id="Gradient_fireball"]
colors = PackedColorArray(1, 0.5, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fireball"]
gradient = SubResource("Gradient_fireball")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_trail"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 30.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 1.5
scale_max = 3.0
color = Color(1, 0.3, 0, 0.8)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_impact"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 300.0
gravity = Vector3(0, 200, 0)
scale_min = 2.0
scale_max = 4.0
color = Color(1, 0.5, 0, 1)

[node name="Fireball" type="Area2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_fireball")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 20
process_material = SubResource("ParticleProcessMaterial_trail")
lifetime = 0.5

[node name="ImpactParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_impact")
one_shot = true
explosiveness = 0.9

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]

